force-app/main/default/objects/Account/fields/Acquisition_Channel__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Channel__c</fullName>
    <description>유입 경로</description>
    <inlineHelpText>팬의 유입 경로를 체크하기</inlineHelpText>
    <label>Acquisition Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SNS</fullName>
            </value>
            <value>
                <fullName>지인 추천</fullName>
            </value>
            <value>
                <fullName>검색</fullName>
            </value>
            <value>
                <fullName>오프라인</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>