force-app/main/default/objects/Account/fields/Age_Group_c__c.field-meta.xml
<CustomField>
    <fullName>Age_Group_c__c</fullName>
    <formula>IF(
    ISBLANK(PersonBirthdate),
    &quot;미상&quot;,
    IF(
        PersonBirthdate &gt; ADDMONTHS(TODAY(), -120),
        &quot;10대 미만&quot;,
        IF(
            PersonBirthdate &gt; ADDMONTHS(TODAY(), -240),
            &quot;10대&quot;,
            IF(
                PersonBirthdate &gt; ADDMONTHS(TODAY(), -360),
                &quot;20대&quot;,
                IF(
                    PersonBirthdate &gt; ADDMONTHS(TODAY(), -480),
                    &quot;30대&quot;,
                    IF(
                        PersonBirthdate &gt; ADDMONTHS(TODAY(), -600),
                        &quot;40대&quot;,
                        &quot;50대 이상&quot;
                    )
                )
            )
        )
    )
)</formula>
    <label>Age Group</label>
    <type>Text</type>
</CustomField>