force-app/main/default/objects/Account/fields/Business_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Business_Reg_No__c</fullName>
    <label>사업자등록번호</label>
    <length>20</length>
    <type>Text</type>
</CustomField>