force-app/main/default/objects/Account/fields/Consent_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Updated_Date__c</fullName>
    <description>동의값 변경 날짜</description>
    <inlineHelpText>동의값 변경 날짜</inlineHelpText>
    <label>Consent Updated Date</label>
    <type>Date</type>
</CustomField>