force-app/main/default/objects/Account/fields/Current_Segment__c.field-meta.xml
<CustomField>
    <fullName>Current_Segment__c</fullName>
    <description>현재 팬의 세그먼트</description>
    <inlineHelpText>현재 팬의 세그먼트</inlineHelpText>
    <label>Current Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Fan</fullName>
                <color>#DDDDDD</color>
                <label>New Fan</label>
            </value>
            <value>
                <fullName>Active Fan</fullName>
                <color>#FF6600</color>
                <label>Active Fan</label>
            </value>
            <value>
                <fullName>At-Risk Fan</fullName>
                <color>#66E9BD</color>
                <label>At-Risk Fan</label>
            </value>
            <value>
                <fullName>Dormant Fan</fullName>
                <color>#6666CC</color>
                <label>Dormant Fan</label>
            </value>
            <value>
                <fullName>Churned Fan</fullName>
                <color>#666666</color>
                <label>Churned Fan</label>
            </value>
            <value>
                <fullName>Unreachable Fan</fullName>
                <color>#999999</color>
                <label>Unreachable Fan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>