force-app/main/default/objects/Account/fields/DART_Enriched_At__c.field-meta.xml
<CustomField>
    <fullName>DART_Enriched_At__c</fullName>
    <label>DART 보강일시</label>
    <type>DateTime</type>
</CustomField>