force-app/main/default/objects/Account/fields/DART_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>DART_Match_Status__c</fullName>
    <label>DART 매칭상태</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>미매칭</fullName>
                <default>true</default>
                <label>미매칭</label>
            </value>
            <value>
                <fullName>검토대기</fullName>
            </value>
            <value>
                <fullName>승인</fullName>
            </value>
            <value>
                <fullName>거절</fullName>
            </value>
            <value>
                <fullName>보강완료</fullName>
            </value>
            <value>
                <fullName>매칭없음</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>