force-app/main/default/objects/Account/fields/Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>이메일 마케팅 수신 동의 여부</description>
    <inlineHelpText>이메일 마케팅 수신 동의 여부</inlineHelpText>
    <label>Email Opt-In</label>
    <type>Checkbox</type>
</CustomField>