force-app/main/default/objects/Account/fields/Engagement_Level__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Level__c</fullName>
    <description>팬의 콘텐츠 반응, 경기 관람, 이벤트 참여, 티켓·굿즈 구매 등의 활동을 종합하여 구단이 제공하는 서비스에 참여하는 수준을 구분하는 필드</description>
    <inlineHelpText>팬의 콘텐츠 반응, 경기 관람, 이벤트 참여, 티켓·굿즈 구매 등의 활동을 종합하여 구단이 제공하는 서비스에 참여하는 수준을 구분하는 필드</inlineHelpText>
    <label>Engagement Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>가입 팬</fullName>
                <color>#DDDDDD</color>
                <label>가입 팬</label>
            </value>
            <value>
                <fullName>관심 팬</fullName>
                <color>#999999</color>
                <label>관심 팬</label>
            </value>
            <value>
                <fullName>활동 팬</fullName>
                <color>#3333FF</color>
                <label>활동 팬</label>
            </value>
            <value>
                <fullName>충성 팬</fullName>
                <color>#006600</color>
                <label>충성 팬</label>
            </value>
            <value>
                <fullName>멤버십 팬</fullName>
                <color>#FF6600</color>
                <label>멤버십 팬</label>
            </value>
            <value>
                <fullName>핵심 팬</fullName>
                <color>#F96FB7</color>
                <label>핵심 팬</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>