force-app/main/default/objects/Account/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <description>팬의 구단 서비스 참여도를 점수로 나타낸 필드</description>
    <inlineHelpText>팬의 구단 서비스 참여도를 점수로 나타낸 필드</inlineHelpText>
    <label>Engagement Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>