force-app/main/default/objects/Account/fields/Fan_Join_Date__c.field-meta.xml
<CustomField>
    <fullName>Fan_Join_Date__c</fullName>
    <label>Join Date</label>
    <type>Date</type>
</CustomField>