force-app/main/default/objects/Account/fields/Fan_Value_Tier__c.field-meta.xml
<CustomField>
    <fullName>Fan_Value_Tier__c</fullName>
    <description>팬의 지출 금액 규모에 따른 분류</description>
    <inlineHelpText>팬의 지출 금액 규모에 따른 분류</inlineHelpText>
    <label>Fan Value Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>일반</fullName>
            </value>
            <value>
                <fullName>우수</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>