force-app/main/default/objects/Account/fields/Favorite_Player__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>팬의 최애 선수</description>
    <inlineHelpText>팬이 가장 선호하는 선수를 선택</inlineHelpText>
    <label>Favorite Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>