force-app/main/default/objects/Account/fields/Kakao_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Kakao_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>카카오톡 마케팅 수신 동의 여부</description>
    <inlineHelpText>카카오톡 마케팅 수신 동의 여부</inlineHelpText>
    <label>Kakao Opt-In</label>
    <type>Checkbox</type>
</CustomField>