force-app/main/default/objects/Account/fields/Latest_Open_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Latest_Open_Opportunity_Amount__c</fullName>
    <description>Amount of this account&apos;s most recently modified open Opportunity, kept in sync by a Flow so PRM staff can see deal size without opening the Opportunity.</description>
    <inlineHelpText>Auto-synced from the most recently modified open Opportunity on this Account. Do not edit manually.</inlineHelpText>
    <label>최근 영업기회 금액</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>