force-app/main/default/objects/Account/fields/Latest_Open_Opportunity_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Latest_Open_Opportunity_Next_Step__c</fullName>
    <description>Next Step of this account&apos;s most recently modified open Opportunity, kept in sync by a Flow so PRM staff can see what action is due next without opening the Opportunity.</description>
    <inlineHelpText>Auto-synced from the most recently modified open Opportunity on this Account. Do not edit manually.</inlineHelpText>
    <label>최근 영업기회 다음 단계</label>
    <length>255</length>
    <type>Text</type>
</CustomField>