force-app/main/default/objects/Account/fields/Latest_Open_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Latest_Open_Opportunity_Stage__c</fullName>
    <description>Stage of this account&apos;s most recently modified open Opportunity, kept in sync by a Flow so PRM staff can see deal progress without opening the Opportunity.</description>
    <inlineHelpText>Auto-synced from the most recently modified open Opportunity on this Account. Do not edit manually.</inlineHelpText>
    <label>최근 영업기회 단계</label>
    <length>80</length>
    <type>Text</type>
</CustomField>