force-app/main/default/objects/Account/fields/Lead_Qualification_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Qualification_Score__c</fullName>
    <description>Lead 전환 당시의 Final Lead Score를 기록하는 필드</description>
    <label>Lead Qualification Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>