force-app/main/default/objects/Account/fields/Market_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Type__c</fullName>
    <label>시장구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>유가증권시장</fullName>
            </value>
            <value>
                <fullName>코스닥</fullName>
            </value>
            <value>
                <fullName>코넥스</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>