force-app/main/default/objects/Account/fields/Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Match_Confidence__c</fullName>
    <label>매칭 신뢰도</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>