force-app/main/default/objects/Account/fields/Match_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Match_Rationale__c</fullName>
    <label>매칭 근거</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>