force-app/main/default/objects/Account/fields/Operating_Profit__c.field-meta.xml
<CustomField>
    <fullName>Operating_Profit__c</fullName>
    <label>영업이익</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>