force-app/main/default/objects/Account/fields/Partnership_Status__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Status__c</fullName>
    <label>파트너십 상태</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <label>활성</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <label>대기중</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <label>비활성</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
                <label>온보딩 중</label>
            </value>
            <value>
                <fullName>Suspended</fullName>
                <label>정지</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>