force-app/main/default/objects/Account/fields/Proposed_Corp_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Corp_Name__c</fullName>
    <label>제안 회사명(DART)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>