force-app/main/default/objects/Account/fields/Proposed_Stock_Code__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Stock_Code__c</fullName>
    <label>제안 종목코드</label>
    <length>10</length>
    <type>Text</type>
</CustomField>