force-app/main/default/objects/Account/fields/Push_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Push_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Push 마케팅 수신 동의 여부</description>
    <inlineHelpText>Push 마케팅 수신 동의 여부</inlineHelpText>
    <label>Push Opt-In</label>
    <type>Checkbox</type>
</CustomField>