force-app/main/default/objects/Account/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <description>팬의 실제 가입일. 신규 가입 시 자동으로 오늘 날짜가 채워지며, 데이터 임포트 시 미리 값을 넣어두면 그 값을 그대로 사용한다.</description>
    <inlineHelpText>신규 가입 팬은 자동으로 오늘 날짜가 기록됩니다. 과거 데이터 임포트 시에는 실제 가입일을 직접 입력하세요.</inlineHelpText>
    <label>가입일</label>
    <type>Date</type>
</CustomField>