force-app/main/default/objects/Account/fields/Report_Gender__c.field-meta.xml
<CustomField>
    <fullName>Report_Gender__c</fullName>
    <formula>TEXT(PersonGender)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Gender</label>
    <type>Text</type>
</CustomField>