force-app/main/default/objects/Account/fields/SDO_Partnership_Status__c.field-meta.xml
<CustomField>
    <fullName>SDO_Partnership_Status__c</fullName>
    <description>Cloud Alpacas와 기업 간의 현재 관계 상태를 나타냅니다. Relationship Type과 별개로 현재 파트너십이 어느 단계에 있는지를 관리합니다.</description>
    <inlineHelpText>현재 이 기업과의 파트너십 진행 상태를 선택합니다. (예: Prospect = 발굴 단계, Active = 계약 진행 중인 활성 파트너)</inlineHelpText>
    <label>Partnership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <label>발굴 중</label>
            </value>
            <value>
                <fullName>Negotiating</fullName>
                <label>협상 중</label>
            </value>
            <value>
                <fullName>Active</fullName>
                <label>활성</label>
            </value>
            <value>
                <fullName>Renewal Due</fullName>
                <label>갱신 예정</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <label>비활성</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>대기 중</label>
            </value>
            <value>
                <fullName>Suspended</fullName>
                <isActive>false</isActive>
                <label>일시 중단</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>