force-app/main/default/objects/Account/fields/Segment_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Segment_Updated_Date__c</fullName>
    <description>팬 세그먼트 변경일</description>
    <inlineHelpText>팬 세그먼트 변경일</inlineHelpText>
    <label>Segment Updated Date</label>
    <type>Date</type>
</CustomField>