force-app/main/default/objects/Account/fields/SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SMS 마케팅 수신 동의 여부</description>
    <inlineHelpText>SMS 마케팅 수신 동의 여부</inlineHelpText>
    <label>SMS Opt-In</label>
    <type>Checkbox</type>
</CustomField>