force-app/main/default/objects/Account/fields/Sponsor_Tier__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Tier__c</fullName>
    <description>스폰서 계정 등급. 총 스폰서십 금액 기준으로 Flow가 자동 산정합니다. (Gold &lt; Platinum &lt; Diamond, 계약 없으면 None)</description>
    <inlineHelpText>총 스폰서십 금액을 기준으로 자동 산정되는 스폰서 등급입니다.</inlineHelpText>
    <label>스폰서 등급</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diamond</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <label>없음</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>