force-app/main/default/objects/Account/fields/Sponsorship_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Opportunity_Count__c</fullName>
    <description>이 계정에 연결된 기회(Opportunity) 건수. Flow가 자동으로 집계합니다.</description>
    <inlineHelpText>이 스폰서 계정과 연결된 스폰서십 기회의 개수입니다.</inlineHelpText>
    <label>스폰서십 기회 건수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>