force-app/main/default/objects/Account/fields/Stock_Code__c.field-meta.xml
<CustomField>
    <fullName>Stock_Code__c</fullName>
    <label>종목코드</label>
    <length>10</length>
    <type>Text</type>
</CustomField>