force-app/main/default/objects/Account/fields/Total_Sponsorship_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Sponsorship_Value__c</fullName>
    <description>이 계정에 연결된 모든 기회(Opportunity) 금액의 합계. Flow가 자동으로 집계합니다.</description>
    <inlineHelpText>이 스폰서 계정과 연결된 전체 스폰서십 기회 금액의 합계입니다.</inlineHelpText>
    <label>총 스폰서십 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>