force-app/main/default/objects/Account/recordTypes/Own_Organization.recordType-meta.xml
<RecordType>
    <fullName>Own_Organization</fullName>
    <active>true</active>
    <description>Record type for Own Organization accounts. Restricted to System Administrators only.</description>
    <label>Own Organization</label>
</RecordType>