force-app/main/default/objects/Account/listViews/DART_Match_Pending.listView-meta.xml
<ListView>
    <fullName>DART_Match_Pending</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Proposed_Corp_Name__c</columns>
    <columns>Proposed_Stock_Code__c</columns>
    <columns>Match_Confidence__c</columns>
    <columns>Match_Rationale__c</columns>
    <columns>DART_Match_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DART_Match_Status__c</field>
        <operation>equals</operation>
        <value>검토대기</value>
    </filters>
    <label>DART 매칭 검토대기</label>
</ListView>