force-app/main/default/objects/Account/listViews/Fan_List.listView-meta.xml
<ListView>
    <fullName>Fan_List</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Current_Segment__c</columns>
    <columns>Fan_Value_Tier__c</columns>
    <columns>Engagement_Level__c</columns>
    <columns>Fan_Join_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Fan</value>
    </filters>
    <label>Fan List</label>
</ListView>