force-app/main/default/objects/Account/listViews/PartnershipAccounts.listView-meta.xml
<ListView>
    <fullName>PartnershipAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Latest_Open_Opportunity_Stage__c</columns>
    <columns>Latest_Open_Opportunity_Amount__c</columns>
    <columns>Latest_Open_Opportunity_Next_Step__c</columns>
    <columns>SDO_Days_Since_Activity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.SDO_Account_Partner</value>
    </filters>
    <label>파트너십 계정</label>
</ListView>