force-app/main/default/objects/Account/listViews/Sponsor_Accounts.listView-meta.xml
<ListView>
    <fullName>Sponsor_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>SDO_Partner_Type__c</columns>
    <columns>Sponsor_Tier__c</columns>
    <columns>Total_Sponsorship_Value__c</columns>
    <columns>Sponsorship_Opportunity_Count__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Partnership_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SDO_Partner_Type__c</field>
        <operation>equals</operation>
        <value>Sponsor</value>
    </filters>
    <label>스폰서 계정</label>
</ListView>